--- a/RabbitMQ.Consumer/appsettings.json
+++ b/RabbitMQ.Consumer/appsettings.json
@@ -16,5 +16,5 @@
   },
 
   // "host=127.0.0.1;port=5672;username={USERNAME};password={PWD}",
-  "RabbitMqTcpConnectionString": "YOUR_CONNECTION_STRING"
+  "RabbitMqTcpConnectionString": "host=192.168.190.12;port=5672;username=rabbitmq;password=rabbitmq"
 }
