--- a/RabbitMQ.Producer/appsettings.json
+++ b/RabbitMQ.Producer/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   // "host=127.0.0.1;port=5672;username={USERNAME};password={PWD}",
-  "RabbitMqTcpConnectionString": "YOUR_CONNECTION_STRING"
+  "RabbitMqTcpConnectionString": "host=192.168.190.12;port=5672;username=rabbitmq;password=rabbitmq"
 
 }
