1. 變更DI物件(IBus) 2. 變更appsetting.connectionstring

--- a/RabbitMQ.Consumer/appsettings.json
+++ b/RabbitMQ.Consumer/appsettings.json
@@ -14,7 +14,8 @@
       "Microsoft": "Warning"
     }
   },
-
-  // "host=127.0.0.1;port=5672;username={USERNAME};password={PWD}",
-  "RabbitMqTcpConnectionString": "host=192.168.190.12;port=5672;username=rabbitmq;password=rabbitmq"
+  "RabbitMQConfig": {
+    //"host=127.0.0.1;port=5672;username={USERNAME};password={PWD}"
+    "ConnectionString": "host=192.168.190.12;port=5672;username=rabbitmq;password=rabbitmq"
+  }
 }
