封裝RabbitMq.Bus注入方式

--- a/RabbitMQ.Consumer/appsettings.json
+++ b/RabbitMQ.Consumer/appsettings.json
@@ -14,7 +14,7 @@
       "Microsoft": "Warning"
     }
   },
-  "RabbitMQConfig": {
+  "RabbitMqConfig": {
     //"host=127.0.0.1;port=5672;username={USERNAME};password={PWD}"
     "ConnectionString": "host=192.168.190.12;port=5672;username=rabbitmq;password=rabbitmq"
   }
