--- a/RabbitMQ.Producer/appsettings.json
+++ b/RabbitMQ.Producer/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "RabbitMQConfig": {
+  "RabbitMqConfig": {
     //"host=127.0.0.1;port=5672;username={USERNAME};password={PWD}"
     "ConnectionString": "host=192.168.190.12;port=5672;username=rabbitmq;password=rabbitmq"
   }
